syntax = "proto3";

package cre.sdk.v2;

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/workflows/sdk/v2/pb";

import "google/protobuf/any.proto";
import "values/pb/values.proto";

enum AggregationType {
  MEDIAN = 0;
  IDENTICAL = 1;
  COMMON_PREFIX = 2;
  COMMON_SUFFIX = 3;
}

message CapabilityRequest {
  string executionId = 1;
  string id = 2;
  google.protobuf.Any payload = 3;
  string method = 4;
}

message CapabilityResponse {
  oneof response {
    google.protobuf.Any payload = 1;
    string error = 2;
  }
}

// TODO https://smartcontract-it.atlassian.net/browse/CAPPL-816 remove this
message PrimitiveConsensus {
  oneof consensus {
    AggregationType simple = 1;
  }
}

message BuiltInConsensusRequest {
  PrimitiveConsensus primitiveConsensus = 1;
  oneof observation {
    values.Value value = 2;
    string error = 3;
  }
  optional values.Value default_value = 4;
}

enum Mode {
  DON = 0;
  Node = 1;
}


message TriggerSubscription {
  string execId = 1;
  string id = 2;
  google.protobuf.Any payload = 3;
  string method = 4;
}

message TriggerSubscriptionRequest {
  repeated TriggerSubscription subscriptions = 1;
}

message Trigger {
  uint64 id = 1;
  google.protobuf.Any payload = 2;
}

message AwaitCapabilitiesRequest {
  string execId = 1;
  repeated string ids = 2;
}

message AwaitCapabilitiesResponse {
  map<string, cre.sdk.v2.CapabilityResponse> responses = 1;
}
